<resources>
    <string name="app_name">lab_5</string>
    <string name="download">Скачать</string>
    <string name="watch">Смотреть</string>
    <string name="delete">Удалить</string>
    <string name="instruction">\tДля выбора журнала введите число в поле ID. После ввода разблокируется \'Скачать\'. После нажатия на кнопку скачать, начнется загрузка файла. Ниже Вы сможете наблюдать прогресс загрузки. По завершению загрузки разблокируются кнопки \'Смотреть\' и \'Удалить\'. По нажатию на кнопку \'Смотреть\' открывается средство просмотра pdf, по нажатию на кнопку \'Удалить\' файл удаляется с устройства. Файлы загружаются в папку \'Загрузки\' или \'Downloads\'. Если файл уже существует, его нельзя будет загрузить повторно.</string>
    <string name="dont_show_again">Больше не показывать</string>
    <string name="ok">OK</string>
</resources>